maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:5: error: ambiguous reference to overloaded definition,
both method random3 in class RandomMouseMaze of type ()Int
and  method random3 in class RandomMouseMaze of type ()Unit
match argument types ()
    random3()
    ^RandomMouseMaze:11: error: ambiguous reference to overloaded definition,
both method random3 in class RandomMouseMaze of type ()Int
and  method random3 in class RandomMouseMaze of type ()Unit
match expected type ?
  if (random3==0){
      ^RandomMouseMaze:14: error: ambiguous reference to overloaded definition,
both method random3 in class RandomMouseMaze of type ()Int
and  method random3 in class RandomMouseMaze of type ()Unit
match expected type ?
  if(random3==1){
     ^RandomMouseMaze:17: error: ambiguous reference to overloaded definition,
both method random3 in class RandomMouseMaze of type ()Int
and  method random3 in class RandomMouseMaze of type ()Unit
match expected type ?
  if (random3==2){
      ^RandomMouseMaze:23: error: method random3 is defined twice
  conflicting symbols both originated in file 'plm.runtime81.RandomMouseMaze'
	def random3():Int = {
            ^