maze.randommouse.RandomMouseMaze.scala.code
override def run() {
 var fin=false
  do{
    random3()
  }
  while(fin==false)
}

def random3(){
  if (random3==0){
    avance()
  }
  if(random3==1){
    droite()
  }
  if (random3==2){
    gauche
  }
}